frontend : scrollbar color change, select search corrected

--- a/horasis-frontend/src/style/custom-scrollbar.css
+++ b/horasis-frontend/src/style/custom-scrollbar.css
@@ -10,7 +10,7 @@
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
-	background-color: #061d3644;
+	background-color: #0e4d9676;
 	border-radius: 100px;
 
 }
